# bevy_ase

./: .gitignore  Cargo.toml  README.md
assets/sprites/: hello.aseprite  tiles.aseprite
examples/animated/: main.rs
examples/simple/: ids.rs  main.rs
examples/tilemap/: main.rs
src/: anim_id.rs  animate.rs  animation.rs  animation_index.rs  ase.rs  aseloader.rs  asset.rs  benimator.rs  bevy_ecs_tilemap.rs  handle_id.rs  lib.rs  loader.rs  processing.rs  slice.rs  sprite.rs  tests.rs  tileset.rs  timer.rs
src/asset/: animation.rs  ase.rs  asset_index.rs  slice.rs  tileset.rs
tests/data/: tileset.aseprite
