[package]
name = "bevy_ase"
version = "0.3.0"
authors = ["Bruce Reif", "alpine_alpaca <alpine.alpaca.games@gmail.com>", ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"
asefile = { git = "https://github.com/B-Reif/asefile", branch = "main" }
anyhow = "1.0"
benimator = { version = "3.0", optional = true }
bevy_ecs_tilemap = { version = "0.6", optional = true }

[profile.dev.package."*"]
opt-level = 2

[[example]]
name = "animated"
required-features = ["benimator"]

[[example]]
name = "tilemap"
required-features = ["bevy_ecs_tilemap"]
