[package]
name = "bevy_ase"
version = "0.3.1"
authors = ["Bruce Reif", "alpine_alpaca <alpine.alpaca.games@gmail.com>", ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8"
asefile = "0.3.5"
anyhow = "1.0"
bevy_ecs_tilemap = { version = "0.6.0", optional = true }
benimator = { version = "4.0.0-rc.1", optional = true}

[profile.dev.package."*"]
opt-level = 2

[[example]]
name = "animated"
required-features = ["benimator"]

[[example]]
name = "tilemap"
required-features = ["bevy_ecs_tilemap"]