[package]
name = "bevy_ase"
version = "0.4.1"
authors = ["Bruce Reif", "alpine_alpaca <alpine.alpaca.games@gmail.com>", ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9"
asefile = "0.3.5"
anyhow = "1.0"
benimator = { version = "4.1.0", optional = true}

[profile.dev.package."*"]
opt-level = 2
